--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,14 @@ body {
     font-size: 14pt;
 }
 
+
 h1 {
     font-family: cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: gold;
     text-align: center;
     font-size: 40pt;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 h2 {
@@ -57,11 +59,19 @@ p {
 .left {
     float: left;
     width: 15%;
+    background-color: rgb(144, 47, 163);
+    height: 100vh;
 }
 
 .left figure img {
     width: 200px;
     height: auto;
+}
+.right {
+    float: right;
+    width: 15%;
+    background-color: rgb(144, 47, 163);
+    height: 100vh;
 }
 
 figcaption {
