--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ h1 {
 }
 
 h2 {
+    margin-top: 0px;
     color: gold;
     text-align: center;
 }
@@ -59,18 +60,18 @@ p {
 .left {
     float: left;
     width: 15%;
-    background-color: rgb(144, 47, 163);
     height: 100vh;
+    margin-top: 0px
 }
 
 .left figure img {
     width: 200px;
     height: auto;
 }
+
 .right {
     float: right;
     width: 15%;
-    background-color: rgb(144, 47, 163);
     height: 100vh;
 }
 
@@ -112,3 +113,52 @@ ul {
     margin-left: 5%;
 }
 
+a.email {
+    color: gold;
+    transition-property: color;
+    transition-duration: 1s;
+    text-decoration: none;
+}
+a.email:visited {
+    color: gold;
+}
+a.email:hover {
+    color: rgb(235, 147, 121);
+    text-decoration: underline;
+}
+
+.wrapimg {
+    float: left;
+    width: 150px;
+    height: auto;
+    padding: 0 20px 0 0;
+}
+
+.wrapp {
+    float: right;
+}
+
+.indentright {
+    line-height: 2em;
+    margin-right: 3%;
+}
+
+.buynow {
+    font-size: 36pt;
+    font-family: cursive;
+    border-radius: 2em;
+    text-align: center;
+    color: gold;
+    background-color: rgb(90, 30, 77);
+    transition-property: color, background-color;
+    transition-duration: 1s;
+    padding: 3px 10px 3px 10px;
+    display: inline-block;
+}
+.buynow:visited {
+    color: gold;
+}
+.buynow:hover {
+    color: rgb(90, 30, 77);
+    background-color: gold;
+}
